# KinectExample

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  PointCloud.h
kinectv1/: CMakeLists.txt  KinectWrapperv1.h  main.cpp
kinectv2/: CMakeLists.txt  KinectWrapperv2.h  main.cpp
