CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT(KinectExample)
if(WIN32)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include "C:/Program Files/Microsoft SDKs/Kinect/v2.0_1409/inc")
   	set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
        set(CMAKE_BUILD_TYPE Release)
	if(CMAKE_SIZEOF_VOID_P EQUAL 8) # 64bit system
		LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib/x64 "C:/Program Files/Microsoft SDKs/Kinect/v2.0_1409/Lib/x64")
	else()
		LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib/x86 "C:/Program Files/Microsoft SDKs/Kinect/v2.0_1409/Lib/x86")
	endif()
	#ADD_SUBDIRECTORY(kinectv1)
	ADD_SUBDIRECTORY(kinectv2)
endif()
